[package]
name = "prompt"
version = "0.0.0"
authors = ["Joshua Li <josh@jrl.ninja>"]
license = "ISC"

[dependencies]
gethostname = { version = "0.2.1" }
git2 = { version = "0.10", default-features = false }

[[bin]]
name = "prompt"
path = "src/main.rs"

[profile.release]
panic = "abort"  # remove support for stack unwinding for smaller releases
lto = "fat"
